1.0-devel
=====================

 * Replaced AttributeStorage with AnnotationStorage for Document:text,
   File:file, Image:image, Event:text and NewsItem:text,image. This requires
   Archetypes 1.3.5
   [tiran]

 * Added new Current Author criterion which, when used with the Creator index,
   gets all objects authored by the currently logged in user.  Also fixed some
   permissions that were preventing normal users from viewing published topics.
   Fixes issue #1176355 (https://sourceforge.net/tracker/?func=detail&aid=1176355&group_id=55262&atid=645337).
   [alecm]

 * Changed processForm to check for id confilicts using check_ids if available,
   otherwise just parent.objectIds().  Also commit sub-transaction to make
   rename work after portal_factory.
   [alecm]

 * Made topic.addCriterion() return the newly added criterion object.  That
   it didn't before made things hard for python product developers.
   [alecm]

 * Fixed bug #3773 (http://members.plone.org/collector/3773) validation
   check for empty/non-existant files/images.
   [alecm]

 * Changed the behavior of the date criteria to make the meaning of
   each field clearer.  Now queries like 'More than 2 weeks ago' can be used,
   and will behave as expected.  This causes some inconsistency in importing
   CMFTopics.  Queries that were of the form 'min' 'x days' 'ago' are now
   'less than x days ago' which is a min:max query with an upper limit of now.
   The same goes for 'max' 'x days' 'ahead', all other queries should be close
   to identical (modulo an earliestTime() where it makes sense).  The
   inconsistency shouldn't be too important as the CMF date criteria was
   entirely inscrutable.  Also changed some strings for criteria descriptions
   for consistency. Fixes bug #1181418 (http://sourceforge.net/tracker/index.php?func=detail&aid=1181418&group_id=55262&atid=645337).
   Thanks to Dean Jackson for filing this bug and devising a reasonably usable
   UI.
   [alecm]
