@@ -132,15 +132,50 @@ def registerActionIcons(self, out):
     action_icons = ({
         'category'  : 'plone',
         'action_id' : 'ics',
-        'icon_expr' : 'ical_icon.gif',
+        'icon_expr' : 'icon_ical_export.png',
         'title'     : 'iCalendar export',
         'priority'  : 0,
         },
         {
         'category'  : 'plone',
         'action_id' : 'vcs',
-        'icon_expr' : 'vcal_icon.gif',
+        'icon_expr' : 'icon_vcal_export.png',
         'title'     : 'vCalendar export',
+        'priority'  : 0,
+        },
+        {
+        'category'  : 'plone',
+        'action_id' : 'rotate_clockwise',
+        'icon_expr' : 'icon_rotate_clockwise.png',
+        'title'     : 'Rotate clockwise',
+        'priority'  : 0,
+        },
+        {
+        'category'  : 'plone',
+        'action_id' : 'rotate_counter_clockwise',
+        'icon_expr' : 'icon_rotate_counter_clockwise.png',
+        'title'     : 'Rotate clockwise',
+        'priority'  : 0,
+        },
+        {
+        'category'  : 'plone',
+        'action_id' : 'rotate_180',
+        'icon_expr' : 'icon_rotate_180.png',
+        'title'     : 'Rotate 180',
+        'priority'  : 0,
+        },
+        {
+        'category'  : 'plone',
+        'action_id' : 'flip_horizontal',
+        'icon_expr' : 'icon_flip_horizontal.png',
+        'title'     : 'Flip horizontal',
+        'priority'  : 0,
+        },
+        {
+        'category'  : 'plone',
+        'action_id' : 'flip_vertical',
+        'icon_expr' : 'icon_flip_vertical.png',
+        'title'     : 'Flip vertical',
         'priority'  : 0,
         },
         )
