@@ -1,6 +1,10 @@
 1.0-devel
 =====================
 
+ * Added cool icons for vCal/iCal export and image rotation/flipping made by
+   the legendary Vidar Anderson.
+   [blacktar, tiran]
+
  * Replaced AttributeStorage with AnnotationStorage for Document:text,
    File:file, Image:image, Event:text and NewsItem:text,image. This requires
    Archetypes 1.3.5
